fixed dark mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,14 +1,16 @@
-/* :root {
-  --background-image: linear-gradient(135deg, #a3e072, #2563eb);
-  --body-color: black;
+:root {
+  --body_background: white;
+  --body_color: black;
   --link_color: navy;
+  --card_color: black;
 }
 
 [data-theme="dark"] {
-  --background-image: black;
+  --body_background: black;
   --body-color: white;
   --link_color: green;
-} */
+  --card_color: white;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
